--- a/ClientManagement/ClientManagement/Views/Home/Index.cshtml
+++ b/ClientManagement/ClientManagement/Views/Home/Index.cshtml
@@ -1,45 +1,55 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
-                <h2>@ViewBag.Message</h2>
-            </hgroup>
-            <p>
-                To learn more about ASP.NET MVC visit
-                <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET MVC.
-                If you have any questions about ASP.NET MVC visit
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="ASP.NET MVC Forum">our forums</a>.
-            </p>
-        </div>
-    </section>
-}
-<h3>We suggest the following:</h3>
-<ol class="round">
-    <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
-    </li>
+﻿<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Login Form</title>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery,min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
 
-    <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
-    </li>
+        <script src="/Scripts/toastr.js" type="text/javascript"></script>
+        <script src="/Scripts/toastr.min.js" type="text/javascript"></script>
+        <script src="/Scripts/flavr.js" type="text/javascript"></script>
+        <script src="/Scripts/flavr.min.js" type="text/javascript"></script>
 
-    <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
-    </li>
-</ol>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+        <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>
+        <script src="http://m-e-conroy.github.io/angular-dialog-service/javascripts/dialogs.min.js" type="text/javascript"></script>
+
+        <link rel="stylesheet" type="text/css" media="screen" href="/Content/toastr.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="/Content/toastr.min.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="/Content/flavr.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="/Content/flavr.min.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery.ui.all.css" />
+    </head>
+
+    <body>
+        <form class="box login">
+	        <fieldset class="boxBody">
+	            <label>Username</label>
+	            <input type="text" tabindex="1" placeholder="Username" required>
+	            <label><a href="#" class="rLink" tabindex="5">Forget your password?</a>Password</label>
+	            <input type="password" tabindex="2" placeholder="Password" required>
+	        </fieldset>
+	        <footer>
+	            <label><input type="checkbox" tabindex="3">Keep me logged in</label>
+	            <input type="submit" class="btnLogin" value="Login" tabindex="4">
+	        </footer>
+        </form>
+    </body>
+    
+</html>
+
+<style type="text/css">
+
+</style>
+
+<script type="text/javascript">
+
+    angular.element(document).ready(function () {
+
+        toastr.info("Main page!", 'INFO!');
+
+    });
+
+</script>
