--- a/ClientManagement/ClientManagement/Views/Home/ClientList.cshtml
+++ b/ClientManagement/ClientManagement/Views/Home/ClientList.cshtml
@@ -1,153 +1,165 @@
-﻿<!DOCTYPE HTML>
-<html>
-    <head>
-        <title>Login Form</title>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery,min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
+﻿<head>
+    <title>Client List</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
 
-        <script src="/Scripts/toastr.js" type="text/javascript"></script>
-        <script src="/Scripts/toastr.min.js" type="text/javascript"></script>
-        <script src="/Scripts/flavr.js" type="text/javascript"></script>
-        <script src="/Scripts/flavr.min.js" type="text/javascript"></script>
+    <script src="/Scripts/toastr.js" type="text/javascript"></script>
+    <script src="/Scripts/toastr.min.js" type="text/javascript"></script>
+    <script src="/Scripts/flavr.js" type="text/javascript"></script>
+    <script src="/Scripts/flavr.min.js" type="text/javascript"></script>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
-        <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>
-        <script src="http://m-e-conroy.github.io/angular-dialog-service/javascripts/dialogs.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
+    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>
+    <script src="http://m-e-conroy.github.io/angular-dialog-service/javascripts/dialogs.min.js" type="text/javascript"></script>
 
-        <link rel="stylesheet" type="text/css" media="screen" href="/Content/toastr.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="/Content/toastr.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="/Content/flavr.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="/Content/flavr.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery.ui.all.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/Content/toastr.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/Content/toastr.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/Content/flavr.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/Content/flavr.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery.ui.all.css" />
     
-        <style type="text/css">
-            body {
-	            background: #fafafa url(http://jackrugile.com/images/misc/noise-diagonal.png);
-	            color: #444;
-	            font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
-	            text-shadow: 0 1px 0 #fff;
-            }
+    <style type="text/css">
+        body {
+	        background: #fafafa url(http://jackrugile.com/images/misc/noise-diagonal.png);
+	        color: #444;
+	        font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
+	        text-shadow: 0 1px 0 #fff;
+        }
 
-            strong {
-	            font-weight: bold; 
-            }
+        strong {
+	        font-weight: bold; 
+        }
 
-            em {
-	            font-style: italic; 
-            }
+        em {
+	        font-style: italic; 
+        }
 
-            table {
-	            background: #f5f5f5;
-	            border-collapse: separate;
-	            box-shadow: inset 0 1px 0 #fff;
-	            font-size: 12px;
-	            line-height: 24px;
-	            margin: 30px auto;
-	            text-align: left;
-	            width: 800px;
-            }	
+        table {
+	        background: #f5f5f5;
+	        border-collapse: separate;
+	        box-shadow: inset 0 1px 0 #fff;
+	        font-size: 12px;
+	        line-height: 24px;
+	        margin: 30px auto;
+	        text-align: left;
+	        width: 800px;
+        }	
 
-            th {
-	            background: url(http://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(#777, #444);
-	            border-left: 1px solid #555;
-	            border-right: 1px solid #777;
-	            border-top: 1px solid #555;
-	            border-bottom: 1px solid #333;
-	            box-shadow: inset 0 1px 0 #999;
-	            color: #fff;
-              font-weight: bold;
-	            padding: 10px 15px;
-	            position: relative;
-	            text-shadow: 0 1px 0 #000;	
-            }
+        th {
+	        background: url(http://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(#777, #444);
+	        border-left: 1px solid #555;
+	        border-right: 1px solid #777;
+	        border-top: 1px solid #555;
+	        border-bottom: 1px solid #333;
+	        box-shadow: inset 0 1px 0 #999;
+	        color: #fff;
+            font-weight: bold;
+	        padding: 10px 15px;
+	        position: relative;
+	        text-shadow: 0 1px 0 #000;	
+        }
 
-            th:after {
-	            background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
-	            content: '';
-	            display: block;
-	            height: 25%;
-	            left: 0;
-	            margin: 1px 0 0 0;
-	            position: absolute;
-	            top: 25%;
-	            width: 100%;
-            }
+        th:after {
+	        background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
+	        content: '';
+	        display: block;
+	        height: 25%;
+	        left: 0;
+	        margin: 1px 0 0 0;
+	        position: absolute;
+	        top: 25%;
+	        width: 100%;
+        }
 
-            th:first-child {
-	            border-left: 1px solid #777;	
-	            box-shadow: inset 1px 1px 0 #999;
-            }
+        th:first-child {
+	        border-left: 1px solid #777;	
+	        box-shadow: inset 1px 1px 0 #999;
+        }
 
-            th:last-child {
-	            box-shadow: inset -1px 1px 0 #999;
-            }
+        th:last-child {
+	        box-shadow: inset -1px 1px 0 #999;
+        }
 
-            td {
-	            border-right: 1px solid #fff;
-	            border-left: 1px solid #e8e8e8;
-	            border-top: 1px solid #fff;
-	            border-bottom: 1px solid #e8e8e8;
-	            padding: 10px 15px;
-	            position: relative;
-	            transition: all 300ms;
-            }
+        td {
+	        border-right: 1px solid #fff;
+	        border-left: 1px solid #e8e8e8;
+	        border-top: 1px solid #fff;
+	        border-bottom: 1px solid #e8e8e8;
+	        padding: 10px 15px;
+	        position: relative;
+	        transition: all 300ms;
+        }
 
-            td:first-child {
-	            box-shadow: inset 1px 0 0 #fff;
-            }	
+        td:first-child {
+	        box-shadow: inset 1px 0 0 #fff;
+        }	
 
-            td:last-child {
-	            border-right: 1px solid #e8e8e8;
-	            box-shadow: inset -1px 0 0 #fff;
-            }	
+        td:last-child {
+	        border-right: 1px solid #e8e8e8;
+	        box-shadow: inset -1px 0 0 #fff;
+        }	
 
-            tr {
-	            background: url(http://jackrugile.com/images/misc/noise-diagonal.png);	
-            }
+        tr {
+	        background: url(http://jackrugile.com/images/misc/noise-diagonal.png);	
+        }
 
-            tr:nth-child(odd) td {
-	            background: #f1f1f1 url(http://jackrugile.com/images/misc/noise-diagonal.png);	
-            }
+        tr:nth-child(odd) td {
+	        background: #f1f1f1 url(http://jackrugile.com/images/misc/noise-diagonal.png);	
+        }
 
-            tr:last-of-type td {
-	            box-shadow: inset 0 -1px 0 #fff; 
-            }
+        tr:last-of-type td {
+	        box-shadow: inset 0 -1px 0 #fff; 
+        }
 
-            tr:last-of-type td:first-child {
-	            box-shadow: inset 1px -1px 0 #fff;
-            }	
+        tr:last-of-type td:first-child {
+	        box-shadow: inset 1px -1px 0 #fff;
+        }	
 
-            tr:last-of-type td:last-child {
-	            box-shadow: inset -1px -1px 0 #fff;
-            }	
+        tr:last-of-type td:last-child {
+	        box-shadow: inset -1px -1px 0 #fff;
+        }	
 
-            tbody:hover td {
-	            color: transparent;
-	            text-shadow: 0 0 3px #aaa;
-            }
+        tbody:hover td {
+	        color: transparent;
+	        text-shadow: 0 0 3px #aaa;
+        }
 
-            tbody:hover tr:hover td {
-	            color: #444;
-	            text-shadow: 0 1px 0 #fff;
-            }
-        </style>
-    </head>
-
-    <table>
+        tbody:hover tr:hover td {
+	        color: #444;
+	        text-shadow: 0 1px 0 #fff;
+        }
+    </style>
+</head>
+    
+<form id="clientListForm" style="width: 90%; height: 90%;" data-ng-app="clientList">
+	<table>
         <thead>
             <tr>
                 <th>ID</th>
                 <th>NAME</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td><strong>1</strong></td>
-                <td>Ante Antic</td>
+        <tbody data-ng-controller="clientListController">
+            <tr ng-repeat="user in users">
+                <td>{{user.ID}}</td>
+                <td>{{user.NAME}}</td>
             </tr>
         </tbody>
     </table>
+</form>
+
+<script type="text/javascript">
     
-</html>
+    angular.element(document).ready(function ($scope) {
+        $scope.users = {};
+    });
+    
+    function clientListController($scope) {
+        $scope.users = [{ ID: '1', NAME: 'ANTE ANTIC' }];
+        console.log('$scope.user is: ' + JSON.stringify($scope.user));
+    }
+
+</script>
