--- a/ClientManagement/ClientManagement/Views/Home/Index.cshtml
+++ b/ClientManagement/ClientManagement/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
-﻿<!DOCTYPE HTML>
-<html>
+﻿@model ClientManagement.Models.ClientModel
+
+<!DOCTYPE HTML>
+<html id="mainHtml">
     <head>
         <title>Login Form</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery,min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
 
@@ -13,6 +15,7 @@
         <script src="/Scripts/flavr.min.js" type="text/javascript"></script>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
         <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>
         <script src="http://m-e-conroy.github.io/angular-dialog-service/javascripts/dialogs.min.js" type="text/javascript"></script>
 
@@ -23,7 +26,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery.ui.all.css" />
     </head>
 
-    <body data-ng-app="validation">
+    <body data-ng-app="validation" id="mainBody">
         <form id="loginForm" data-ng-submit="sendForm();" class="box login" data-ng-controller="SignUpController">
 	        <fieldset class="boxBody">
 	            <label>Username</label>
@@ -62,8 +65,7 @@
                 if (data.success === false)
                     toastr.error("Error while login!", 'ERROR!');
                 else {
-                    toastr.success("Successfull login!", 'SUCCESS!');
-                    $scope.user = {};
+                    angular.element('#mainBody').html(data);
                 }
             }).error(function (data, status, headers, config) {
                 toastr.error("Unexpected Error!", 'ERROR!');
