--- a/ClientManagement/ClientManagement/Views/Home/Index.cshtml
+++ b/ClientManagement/ClientManagement/Views/Home/Index.cshtml
@@ -13,8 +13,10 @@
         <script src="/Scripts/toastr.min.js" type="text/javascript"></script>
         <script src="/Scripts/flavr.js" type="text/javascript"></script>
         <script src="/Scripts/flavr.min.js" type="text/javascript"></script>
+        <script src="/Scripts/main.js" type="text/javascript"></script>
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+        <script src="https://code.angularjs.org/1.3.2/angular-mocks.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
         <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>
         <script src="http://m-e-conroy.github.io/angular-dialog-service/javascripts/dialogs.min.js" type="text/javascript"></script>
@@ -53,8 +55,8 @@
     });
 
     var app = angular.module('validation', []);
-    app.controller('SignUpController', function ($scope, $http, $location) {
-        $scope.user = {};
+    app.controller('SignUpController', function ($scope, $http, $location, myService) {
+        $scope.users = {};
         $scope.sendForm = function () {
             $http({
                 method: 'POST',
@@ -65,6 +67,13 @@
                 if (data.success === false)
                     toastr.error("Error while login!", 'ERROR!');
                 else {
+                    $scope.users = [{ ID: '1', NAME: 'ANTE ANTIC' }, { ID: '2', NAME: 'IVO IVIC' }];
+                    myService.set($scope.users);
+                    
+                    console.log('USERS BEFORE SUBMIT: ' + JSON.stringify(myService.get()));
+
+                    jQuery('#mainHtml').append('<input type="hidden" id="usersInHidden" name="usersInHidden" value="' + JSON.stringify($scope.users) + '" />');
+
                     angular.element('#mainBody').html(data);
                 }
             }).error(function (data, status, headers, config) {
@@ -72,5 +81,21 @@
             });
         };
     });
+
+    /*You need to create a service to be able to share data between controllers.*/
+    app.factory('myService', function () {
+        var savedData = {}
+        function set(data) {
+            savedData = data;
+        }
+        function get() {
+            return savedData;
+        }
+
+        return {
+            set: set,
+            get: get
+        }
+    })
 
 </script>
