--- a/ClientManagement/ClientManagement/Views/Home/ClientList.cshtml
+++ b/ClientManagement/ClientManagement/Views/Home/ClientList.cshtml
@@ -1,9 +1,9 @@
 ﻿<head>
     <title>Client List</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <script src="/Scripts/toastr.js" type="text/javascript"></script>
     <script src="/Scripts/toastr.min.js" type="text/javascript"></script>
@@ -16,6 +16,15 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.js"></script>
     <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js" type="text/javascript"></script>
     <script src="http://m-e-conroy.github.io/angular-dialog-service/javascripts/dialogs.min.js" type="text/javascript"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" type="text/css" media="screen" href="/Content/toastr.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="/Content/toastr.min.css" />
@@ -141,10 +150,11 @@
         }
 
     </style>
+
 </head>
     
 <form id="clientListForm" style="width: 90%; height: 90%;" data-ng-app="clientList" data-ng-controller="clientListController">
-    <input id="selectedClientId" name="selectedClientId" value="" type="hidden">
+    <input id="selectedClientId" data-ng-name="selectedClientId" name="selectedClientId" value="" type="hidden">
 
     <div id="tableHolder" style="width: 95%; height: 80%; float: left;">
 	    <table style="width: 95%; height: 95%;">
@@ -166,24 +176,84 @@
     <div id="buttonsHolder" style="width: 95%; height: 20%; text-align: center; margin-left: -195px; float: left;">
         <input type="button" class="btnLogin" value="Add" />
         <input type="button" class="btnLogin" value="Delete" />
-        <input type="button" class="btnLogin" value="Edit" />
-        <input type="button" class="btnLogin" value="Credentials" />
+        <input type="button" class="btnLogin" id="edit" data-ng-click="edit();" value="Edit" />
         <input type="submit" class="btnLogin" id="logOut" data-ng-click="logOut();" value="Log Out" />
     </div>
+
+    <modal title="Login form" visible="showModal" data-ng-class="{'class': showModal == false}">
+        <form role="form">
+            <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email" />
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password" />
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+  </modal>
 
 </form>
 
 <script type="text/javascript">
     
+    var app = angular.module('clientList', []);
+
+    app.directive('modal', function () {
+        return {
+            template: '<div class="modal fade">' +
+                '<div class="modal-dialog">' +
+                  '<div class="modal-content">' +
+                    '<div class="modal-header">' +
+                      '<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>' +
+                      '<h4 class="modal-title">{{ title }}</h4>' +
+                    '</div>' +
+                    '<div class="modal-body" ng-transclude></div>' +
+                  '</div>' +
+                '</div>' +
+              '</div>',
+            restrict: 'E',
+            transclude: true,
+            replace: true,
+            scope: true,
+            link: function postLink(scope, element, attrs) {
+                scope.title = attrs.title;
+
+                scope.$watch(attrs.visible, function (value) {
+                    if (value == true)
+                        $(element).modal('show');
+                    else
+                        $(element).modal('hide');
+                });
+
+                $(element).on('shown.bs.modal', function () {
+                    scope.$apply(function () {
+                        scope.$parent[attrs.visible] = true;
+                    });
+                });
+
+                $(element).on('hidden.bs.modal', function () {
+                    scope.$apply(function () {
+                        scope.$parent[attrs.visible] = false;
+                    });
+                });
+            }
+        };
+    });
+
     angular.element(document).ready(function ($scope) {
     });
     
     function clientListController($scope, $http, $location, myService) {
         $scope.users = angular.fromJson($('#usersInHidden').val());
 
+        $scope.showModal = false;
+
         $scope.selectedRow = function ($index, id) {
             $scope.selectedId = $index;
             $('#selectedClientId').val(id);
+            $scope.selectedClientId = id;
         };
 
         $scope.logOut = function () {
@@ -195,7 +265,25 @@
 		            $scope.data = data || "Request failed";
 		            $scope.status = status;
 		        });
-            };
+        };
+
+        $scope.edit = function () {
+
+            var selectedId = $scope.selectedClientId;
+            if (!isVariableEmpty(selectedId)) {
+                alert(selectedId);
+
+                $scope.showModal = !$scope.showModal;
+            }
+        };
+    }
+
+    function isVariableEmpty(data) {
+
+        if (data != null && data != 'null' && data != 'undefined' && data != '')
+            return false;
+        else
+            return true;
     }
 
 </script>
